# KeyOffBeatMineral

./: json_data.json  main.py  model.py  presenter.py  pyproject.toml  view.py
