[tool.poetry]
name = "recipe-manager"
version = "0.1.0"
description = "A recipe manager, kind of like a digital cookbook"
authors = ["Caden Haustein <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
beautifulsoup4 = "^4.10.0"
validators = "^0.18.2"
jsonschema = "^4.4.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"